--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -1,9 +1,3 @@
-#page-landing {
-  background: #EDF5FB;
-  border-radius: 1.6rem;
-  overflow: hidden;
-}
-
 #page-landing header {
   height: 25rem;
   background: #44BBA4;
@@ -17,43 +11,37 @@
   padding: 1rem;
 }
 
-.page-header-title {
+#page-landing header .page-header-title {
   text-align: center;
   margin-top: 5rem;
 }
 
-#search-repo {
+#page-landing header #search-repo {
   display: flex;
   align-items: center;
-  justify-content: center;
-  max-width: 50rem;
-  min-width: 20rem;
+  max-width: 55rem;
   width: 100%;
-  margin-bottom: 1rem;
+  justify-content: space-evenly;
 }
 
-.input-block {
+#page-landing header #search-repo input {
   flex: 1;
-}
-
-.input-block input {
-  padding: 1rem;
-
-  width: 100%;
-  height: 4rem;
+  margin-right: 1rem;
+  padding: 0.8rem;
+  border-radius: 8px;
   border: 0;
-  border-radius: 6px;
-
-  box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
-.input-block input::placeholder {
-  color: #999;
+#page-landing header #search-repo button {
+  background: none;
+  border: 0;
+  cursor: pointer;
 }
 
 #page-landing main {
   padding: 1rem;
-  max-width: 100%;
+  padding-top: 0;
+  max-width: 60rem;
   margin: 0 auto;
-  overflow: auto;
 }
