Fixed issues link. Added 'no repo' message.

--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -5,7 +5,7 @@
 
 #page-landing header {
   height: 25rem;
-  background: #44BBA4;
+  background: #44bba4;
   box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.25);
 
   display: flex;
